# stayAwakeBot

./: .dockerignore  .gitignore  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  action.yml  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml
.github/instructions/: bot.yml
.github/scripts/: _pin_lib.sh  check_pin_drift.sh  check_pin_freshness.sh  check_pins_synced.sh
.github/workflows/: ci.yml  health-check.yml  release.yml  scanner-pin-drift.yml  scanner-pin-freshness.yml  security-remediate.yml  security-sentinel.yml  stayawake-sentinel.yml  worm-guard.yml
.github/workflows-staged/: release.yml
config/: security.yml  security_signatures.yml  urls.yml
docs/: ARCHITECTURE.md  CLI.md  CONFIGURATION.md  CREDENTIAL_HYGIENE.md  PREREQUISITES.md  RELEASING.md  SECURITY_ARCHITECTURE.md  USAGE.md
health/: alerter.py  checker.py  config.py  reporter.py  service.py
health/cli/: alert.py  check.py  report.py
helpers/: __init__.py  alerter_helpers.py  checker_helpers.py  reporter_helpers.py
helpers/common/: __init__.py  github.py  io.py
helpers/security/: __init__.py  findings.py  matchers.py  scanner.py  signatures.py  targets.py
prevent/: INCIDENT_2026-05-26_worm-branch-purge.md  SECURITY_BASELINE.md  install-hooks.sh  pre-commit
prevent/hooks/: _worm_lib.sh  post-checkout  post-merge  pre-commit
reports/: history.json  latest.json  reporter.py  status.json
reports/2026-04-10/: 18-18-UTC.md  18-46-UTC.md
reports/2026-04-11/: 17-00-UTC.md  17-01-UTC.md  17-14-UTC.md  17-20-UTC.md  17-54-UTC.md  18-42-UTC.md  19-25-UTC.md  19-56-UTC.md  20-39-UTC.md  21-05-UTC.md  21-47-UTC.md  22-16-UTC.md  22-55-UTC.md  23-36-UTC.md
reports/2026-04-12/: 00-03-UTC.md  03-43-UTC.md  05-47-UTC.md  06-59-UTC.md  08-07-UTC.md  09-03-UTC.md  09-57-UTC.md  10-47-UTC.md  11-23-UTC.md  11-55-UTC.md  13-03-UTC.md  14-03-UTC.md  14-54-UTC.md  15-35-UTC.md  16-05-UTC.md  16-56-UTC.md  17-39-UTC.md  18-24-UTC.md  19-13-UTC.md  19-54-UTC.md  20-34-UTC.md  21-05-UTC.md  21-49-UTC.md  22-19-UTC.md  22-59-UTC.md  23-47-UTC.md
reports/2026-04-13/: 01-12-UTC.md  04-31-UTC.md  06-33-UTC.md  08-34-UTC.md  10-20-UTC.md  11-48-UTC.md  12-51-UTC.md  14-28-UTC.md  15-57-UTC.md  17-14-UTC.md  18-19-UTC.md  19-45-UTC.md  20-39-UTC.md  21-32-UTC.md  22-27-UTC.md  23-12-UTC.md
reports/2026-04-14/: 00-01-UTC.md  03-36-UTC.md  05-48-UTC.md  07-13-UTC.md  08-56-UTC.md  10-18-UTC.md  11-33-UTC.md  12-42-UTC.md  14-25-UTC.md  15-50-UTC.md  16-53-UTC.md  18-00-UTC.md  19-38-UTC.md  20-34-UTC.md  21-31-UTC.md  22-25-UTC.md  23-12-UTC.md
reports/2026-04-15/: 00-01-UTC.md  03-35-UTC.md  05-49-UTC.md  07-14-UTC.md  08-57-UTC.md  10-20-UTC.md  11-31-UTC.md  12-41-UTC.md  14-20-UTC.md  15-43-UTC.md  16-45-UTC.md  17-53-UTC.md  19-09-UTC.md  20-10-UTC.md  21-07-UTC.md  22-03-UTC.md  22-57-UTC.md  23-51-UTC.md
reports/2026-04-16/: 01-26-UTC.md  04-36-UTC.md  06-23-UTC.md  08-11-UTC.md  09-50-UTC.md  10-53-UTC.md  11-57-UTC.md  14-02-UTC.md  15-49-UTC.md  17-00-UTC.md  18-14-UTC.md  19-39-UTC.md  20-31-UTC.md  21-24-UTC.md  22-06-UTC.md  23-00-UTC.md  23-54-UTC.md
reports/2026-04-17/: 02-14-UTC.md  05-12-UTC.md  07-05-UTC.md  08-52-UTC.md  10-07-UTC.md  11-12-UTC.md  12-05-UTC.md  13-56-UTC.md  15-00-UTC.md  16-09-UTC.md  17-07-UTC.md  18-03-UTC.md  19-17-UTC.md  20-05-UTC.md  21-01-UTC.md  21-56-UTC.md  22-42-UTC.md  23-25-UTC.md
reports/2026-04-18/: 00-04-UTC.md  03-27-UTC.md  05-24-UTC.md  06-45-UTC.md  07-48-UTC.md  08-33-UTC.md  09-30-UTC.md  10-23-UTC.md  11-06-UTC.md  11-48-UTC.md  12-29-UTC.md  13-44-UTC.md  14-28-UTC.md  15-09-UTC.md  15-54-UTC.md  16-37-UTC.md  17-21-UTC.md  17-56-UTC.md  18-59-UTC.md  19-46-UTC.md  20-19-UTC.md  20-58-UTC.md  21-46-UTC.md  22-18-UTC.md  22-58-UTC.md  23-46-UTC.md
reports/2026-04-19/: 01-12-UTC.md  04-24-UTC.md  06-13-UTC.md  07-48-UTC.md  08-39-UTC.md  09-31-UTC.md  10-21-UTC.md  11-04-UTC.md  11-48-UTC.md  12-28-UTC.md  13-42-UTC.md  14-27-UTC.md  15-09-UTC.md  15-54-UTC.md  16-37-UTC.md  17-20-UTC.md  17-57-UTC.md  19-00-UTC.md  19-48-UTC.md  20-21-UTC.md  21-01-UTC.md  21-48-UTC.md  22-20-UTC.md  23-00-UTC.md  23-49-UTC.md
reports/2026-04-20/: 01-14-UTC.md  04-32-UTC.md  06-35-UTC.md  08-39-UTC.md  10-23-UTC.md  11-50-UTC.md  12-57-UTC.md  14-56-UTC.md  16-12-UTC.md  17-20-UTC.md  18-13-UTC.md  19-35-UTC.md  20-25-UTC.md  21-11-UTC.md  22-04-UTC.md  23-00-UTC.md  23-55-UTC.md
reports/2026-04-21/: 02-35-UTC.md  05-15-UTC.md  07-08-UTC.md  09-01-UTC.md  10-40-UTC.md  11-45-UTC.md  12-48-UTC.md  14-26-UTC.md  15-53-UTC.md  16-54-UTC.md  17-58-UTC.md  19-24-UTC.md  20-27-UTC.md  21-23-UTC.md  22-06-UTC.md  22-57-UTC.md  23-42-UTC.md
reports/2026-04-22/: 01-07-UTC.md  04-16-UTC.md  06-14-UTC.md  08-09-UTC.md  09-52-UTC.md  10-58-UTC.md  12-04-UTC.md  14-05-UTC.md  15-38-UTC.md  16-41-UTC.md  17-42-UTC.md  18-47-UTC.md  19-56-UTC.md  20-59-UTC.md  21-59-UTC.md  22-57-UTC.md  23-51-UTC.md
reports/2026-04-23/: 01-45-UTC.md  04-39-UTC.md  06-27-UTC.md  08-22-UTC.md  10-02-UTC.md  11-19-UTC.md  12-12-UTC.md  14-13-UTC.md  16-12-UTC.md  17-47-UTC.md  18-48-UTC.md  19-58-UTC.md  21-01-UTC.md  21-57-UTC.md  22-53-UTC.md  23-41-UTC.md
reports/2026-04-24/: 01-13-UTC.md  04-28-UTC.md  06-27-UTC.md  08-32-UTC.md  10-10-UTC.md  11-34-UTC.md  12-41-UTC.md  14-20-UTC.md  15-43-UTC.md  16-41-UTC.md  17-38-UTC.md  18-30-UTC.md  19-33-UTC.md  20-26-UTC.md  21-25-UTC.md  22-09-UTC.md  22-58-UTC.md  23-50-UTC.md
reports/2026-04-25/: 01-15-UTC.md  04-10-UTC.md  05-59-UTC.md  07-42-UTC.md  08-35-UTC.md  09-34-UTC.md  10-26-UTC.md  11-12-UTC.md  11-56-UTC.md  13-12-UTC.md  14-09-UTC.md  15-00-UTC.md  15-52-UTC.md  (+11 more)
scripts/: __init__.py  alerter.py  checker.py  reporter.py  security_scan.py
security/: alerter.py  pr.py  remediation.py  remediator.py  reporter.py  scanner.py  service.py  signatures.py
shared/: io.py
stayawakebot/: __init__.py
tests/: test_banner.py  test_cli.py  test_guard.py  test_pin_freshness.py  test_pin_tooling.py  test_self_scan_clean.py  test_streaming.py  test_terminal_caps.py
(+1069 files in other folders)
