[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "stayawakebot"
# Version is derived from the git tag at build time (hatch-vcs); never hand-edited.
# `stayawake` (the import package) stays the same — only the PyPI distribution name
# differs, because `stayawake` is already taken on PyPI by an unrelated project.
dynamic = ["version"]
description = "Distributable monitoring & security sentinel toolkit — uptime checks plus self-propagating-worm detection, remediation, and prevention."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jean Paul Elisa NIYOKWIZERWA" }]
keywords = ["monitoring", "uptime", "security", "sentinel", "worm", "supply-chain", "github-actions"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "aiohttp",
  "pyyaml",
  "certifi",   # portable CA bundle for GitHub API TLS (the OS store isn't always wired to OpenSSL)
]

[project.optional-dependencies]
dev = []   # the test suite uses the stdlib `unittest`
# GitHub App auth (org-wide installation tokens). Opt-in so the base install stays
# stdlib-only; only needed to run with GH_APP_ID + a private key.
app = ["pyjwt[crypto]>=2.0"]

[project.urls]
Homepage = "https://github.com/Ndevu12/stayAwakeBot"
Repository = "https://github.com/Ndevu12/stayAwakeBot"

# Console scripts (available after `pip install`); each maps to an existing thin main() (DRY).
[project.scripts]
# Unified terse CLI (security-only) + a collision-proof long alias. See docs/CLI.md.
saw                        = "stayawake.cli:main"
stayawake                  = "stayawake.cli:main"
# Health bot per-command scripts — FROZEN: remote workflows + Docker depend on these
# byte-for-byte. (The security bot is driven entirely through the terminal-first `saw` CLI.)
stayawake-health-check     = "stayawake.bots.health.cli.check:main"

# Derive the version from the git tag (e.g. tag `v0.1.0` -> version `0.1.0`).
[tool.hatch.version]
source = "vcs"

# Only consider full X.Y.Z release tags when deriving the version. The action is published
# to the Marketplace under MOVING major tags (`v1`, `v2`) that share this git tag namespace;
# without this `--match`, `git describe` could latch onto a bare `v1` and report the package
# as version 1.x. Restricting the match keeps the two tag schemes from colliding.
[tool.hatch.version.raw-options]
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v[0-9]*.[0-9]*.[0-9]*"]

# Keep the source distribution lean and safe. Hatchling's default sdist would ship the
# whole working tree — including reports/ (hundreds of scan reports that QUOTE detected
# malware payloads) and tests/ fixtures (deliberately "infected" sample files). Shipping
# those to PyPI is both bloat and, for a supply-chain scanner, an embarrassment.
# `only-include` is restrictive (not glob-at-any-depth like `include`), so a stray
# README.md under tests/fixtures cannot leak in. README/LICENSE/pyproject are always added
# by Hatchling as metadata; CHANGELOG is named explicitly.
[tool.hatch.build.targets.sdist]
only-include = ["src/stayawake", "CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/stayawake"]

# Ship the default signature database as package data so an installed scanner is self-contained.
[tool.hatch.build.targets.wheel.force-include]
"src/stayawake/bots/security/data/signatures.yml" = "stayawake/bots/security/data/signatures.yml"
